# zoya

./: .gitignore  CLAUDE.md  Cargo.toml  ERRORS.md  Justfile  LICENSE  README.md  ROADMAP.md  TEST_PERF.md  TYPE_ERRORS.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docs.yml
crates/zoya/: Cargo.toml  README.md
crates/zoya-ast/: Cargo.toml  README.md
crates/zoya-ast/src/: lib.rs
crates/zoya-build/: Cargo.toml  README.md
crates/zoya-build/src/: lib.rs
crates/zoya-check/: Cargo.toml  README.md
crates/zoya-check/src/: builtin.rs  check.rs  definition.rs  imports.rs  lib.rs  naming.rs  pattern.rs  resolution.rs  type_resolver.rs  unify.rs  usefulness.rs
crates/zoya-check/src/check/: tests.rs
crates/zoya-check/src/check/tests/: attributes.rs  binop.rs  blocks.rs  enums.rs  functions.rs  impl_blocks.rs  imports.rs  index.rs  interpolated_string.rs  lambdas.rs  list_spread.rs  match_expr.rs  methods.rs  misc.rs  primitives.rs  structs.rs  traits.rs  tuple_index.rs  type_aliases.rs  variables.rs
crates/zoya-codegen/: Cargo.toml  README.md
crates/zoya-codegen/src/: codegen.rs  error_codes.rs  hamt.js  lib.rs
crates/zoya-codegen/src/js/: bigint.js  float.js  hamt.js  int.js  list.js  prelude.js  set.js  string.js
crates/zoya-dashboard/: Cargo.toml  README.md
crates/zoya-dashboard/src/: components.rs  data.rs  lib.rs
crates/zoya-dashboard/tests/: dashboard_tests.rs
crates/zoya-fetch/: Cargo.toml
crates/zoya-fetch/src/: fetch.rs  headers.rs  lib.rs  response.rs
crates/zoya-fmt/: Cargo.toml  README.md
crates/zoya-fmt/src/: format.rs  lib.rs
crates/zoya-ir/: Cargo.toml  README.md
crates/zoya-ir/src/: display.rs  ir.rs  lib.rs  types.rs
crates/zoya-job/: Cargo.toml  README.md
crates/zoya-job/src/: lib.rs
crates/zoya-kv/: Cargo.toml
crates/zoya-kv/src/: lib.rs
crates/zoya-lexer/: Cargo.toml  README.md
crates/zoya-lexer/src/: lib.rs
crates/zoya-loader/: Cargo.toml  README.md
crates/zoya-loader/src/: lib.rs  source.rs  sources.rs
crates/zoya-loader/src/sources/: fs.rs  memory.rs
crates/zoya-module/: Cargo.toml  README.md
crates/zoya-module/src/: lib.rs
crates/zoya-naming/: Cargo.toml  README.md
crates/zoya-naming/src/: lib.rs
crates/zoya-package/: Cargo.toml  README.md
crates/zoya-package/src/: config.rs  lib.rs
crates/zoya-parser/: Cargo.toml  README.md
crates/zoya-parser/src/: expressions.rs  helpers.rs  items.rs  lib.rs  patterns.rs  statements.rs  types.rs
crates/zoya-router/: Cargo.toml  README.md
crates/zoya-router/src/: convert.rs  lib.rs
crates/zoya-router/tests/: router_tests.rs
crates/zoya-run/: Cargo.toml  README.md
crates/zoya-run/src/: eval.rs  fetch.rs  headers.rs  lib.rs  request.rs  response.rs  runner.rs
crates/zoya-run/tests/: runner_tests.rs
crates/zoya-std/: Cargo.toml  README.md
crates/zoya-std/src/: lib.rs
crates/zoya-std/src/std/: bigint.zy  bytes.zy  dict.zy  float.zy  http.zy  int.zy  io.zy  json.zy  list.zy  main.zoya  main.zy  option.zoya  option.zy  prelude.zy  result.zoya  result.zy  set.zy  string.zy  task.zy
crates/zoya-test/: Cargo.toml  README.md
crates/zoya-test/src/: lib.rs
crates/zoya-test/tests/: test_runner_tests.rs
crates/zoya-value/: Cargo.toml  README.md
crates/zoya-value/src/: fetch.rs  js.rs  json.rs  lib.rs  parse.rs
crates/zoya-vcs/: Cargo.toml
crates/zoya-vcs/src/: blob.rs  commit.rs  diff.rs  lib.rs  merge.rs  operation.rs  revision.rs  store.rs  tree.rs  utils.rs  view.rs
crates/zoya/src/: check.rs  codegen.rs  commands.rs  diagnostic.rs  eval.rs  main.rs  repl.rs  runner.rs  unify.rs
crates/zoya/src/check/: builtin.rs  definition.rs  pattern.rs  resolution.rs  type_resolver.rs  usefulness.rs
crates/zoya/src/commands/: build.rs  check.rs  dev.rs  fmt.rs  init.rs  new.rs  repl.rs  resolve.rs  run.rs  test.rs
crates/zoya/src/commands/job/: list.rs  run.rs
crates/zoya/src/commands/task/: list.rs  run.rs
crates/zoya/tests/: examples.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/language/: enums.md  functions.md  impl-blocks.md  methods.md  pattern-matching.md  standard-library.md  structs.md  types.md
docs/src/reference/: cli.md  naming-conventions.md
docs/src/specification/: definitions.md  expressions.md  lexical-structure.md  modules.md  types.md
editors/tree-sitter-zoya/: grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-zoya/src/: grammar.json  node-types.json  parser.c  scanner.c
editors/tree-sitter-zoya/test/corpus/: enums.txt  expressions.txt  functions.txt  impl_blocks.txt  literals.txt  modules.txt  patterns.txt  strings.txt  structs.txt  types.txt
editors/zed-zoya/: extension.toml
editors/zed-zoya/languages/zoya/: config.toml  highlights.scm  locals.scm
examples/algorithms/: package.toml
examples/algorithms/src/: main.zy
examples/std-tests/: package.toml
examples/std-tests/src/: bigint.zy  bytes.zy  dict.zy  float.zy  int.zy  list.zy  main.zy  option.zy  result.zy  set.zy  string.zy  task.zy
examples/tests/: package.toml
examples/tests/src/: enums.zy  expressions.zy  functions.zy  impls.zy  jobs.zy  json.zy  lambdas.zy  lists.zy  main.zy  modules.zy  operators.zy  patterns.zy  std_option.zy  std_result.zy  strings.zy  structs.zy  tuple_structs.zy  tuples.zy  type_aliases.zy
examples/tests/src/modules/: cascading.zy  glob_imports.zy  group_imports.zy  hierarchies.zy  imports.zy  module_import.zy  pub_mod.zy  reexports.zy  shadowing.zy  std_option.zy  type_imports.zy  use_paths.zy  visibility.zy
examples/tests/src/modules/cascading/: facade.zy  types.zy
examples/tests/src/modules/glob_imports/: geom.zy  math.zy  parent.zy  (+3 more)
spec/: 01-lexical-structure.md  02-types.md  03-expressions.md  04-definitions.md  05-modules.md
src/: ast.rs  check.rs  codegen.rs  eval.rs  ir.rs  lexer.rs  main.rs  parser.rs  repl.rs  runner.rs  types.rs  unify.rs  usefulness.rs
src/check/: definition.rs  naming.rs  pattern.rs  type_resolver.rs
src/commands/: build.rs  check.rs
(+57 files in other folders)
