[package]
name = "zoya-build"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zoya-check = { path = "../zoya-check" }
zoya-loader = { path = "../zoya-loader" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-ir = { path = "../zoya-ir" }
zoya-package = { path = "../zoya-package" }
zoya-std = { path = "../zoya-std" }
