[package]
name = "zoya-build"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zoya-check = { path = "../zoya-check" }
zoya-loader = { path = "../zoya-loader" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-ir = { path = "../zoya-ir" }
zoya-package = { path = "../zoya-package" }
zoya-std = { path = "../zoya-std" }
