[package]
name = "zoya-check"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zoya-ast = { path = "../zoya-ast" }
zoya-ir = { path = "../zoya-ir" }
zoya-naming = { path = "../zoya-naming" }
zoya-package = { path = "../zoya-package" }

[dev-dependencies]
zoya-loader = { path = "../zoya-loader" }
zoya-std = { path = "../zoya-std" }
