[package]
name = "zoya-codegen"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
zoya-ast = { path = "../zoya-ast" }
zoya-ir = { path = "../zoya-ir" }
zoya-package = { path = "../zoya-package" }
