[package]
name = "zoya-dashboard"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zoya-build = { path = "../zoya-build" }
zoya-package = { path = "../zoya-package" }

[dev-dependencies]
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
zoya-loader = { path = "../zoya-loader" }
