[package]
name = "zoya-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen", "loader", "futures", "parallel", "array-buffer", "macro"] }
rquickjs-serde = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
