[package]
name = "zoya-fetch"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen", "loader", "futures", "parallel", "array-buffer", "macro"] }
rquickjs-serde = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
