[package]
name = "zoya-fmt"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zoya-ast = { path = "../zoya-ast" }
pretty = "0.12"

[dev-dependencies]
zoya-lexer = { path = "../zoya-lexer" }
zoya-parser = { path = "../zoya-parser" }
