[package]
name = "zoya-job"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis = { version = "0.7", features = ["retry"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
zoya-build = { path = "../zoya-build" }
zoya-ir = { path = "../zoya-ir" }
zoya-package = { path = "../zoya-package" }
zoya-run = { path = "../zoya-run" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
apalis-core = { version = "0.7", features = ["test-utils"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
zoya-codegen = { path = "../zoya-codegen" }
zoya-loader = { path = "../zoya-loader" }
