[package]
name = "zoya-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
zoya-package = { path = "../zoya-package" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
