[package]
name = "zoya-kv"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
zoya-package = { path = "../zoya-package" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
