[package]
name = "zoya-loader"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zoya-ast = { path = "../zoya-ast" }
zoya-lexer = { path = "../zoya-lexer" }
zoya-naming = { path = "../zoya-naming" }
zoya-package = { path = "../zoya-package" }
zoya-parser = { path = "../zoya-parser" }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
