[package]
name = "zoya-package"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
zoya-ast = { path = "../zoya-ast" }
zoya-naming = { path = "../zoya-naming" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
