[package]
name = "zoya-router"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
http = "1"
zoya-build = { path = "../zoya-build" }
zoya-package = { path = "../zoya-package" }
zoya-run = { path = "../zoya-run" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
zoya-loader = { path = "../zoya-loader" }
