[package]
name = "zoya-run"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.9", features = ["bindgen", "loader"] }
thiserror = "2"
zoya-check = { path = "../zoya-check" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-ir = { path = "../zoya-ir" }
zoya-loader = { path = "../zoya-loader" }
zoya-package = { path = "../zoya-package" }
zoya-std = { path = "../zoya-std" }

[dev-dependencies]
tempfile = "3"
