[package]
name = "zoya-run"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen", "loader", "futures", "parallel", "array-buffer"] }
rquickjs-serde = "0.5"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
thiserror = "2"
zoya-build = { path = "../zoya-build" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-ir = { path = "../zoya-ir" }
zoya-loader = { path = "../zoya-loader" }
zoya-package = { path = "../zoya-package" }
zoya-value = { path = "../zoya-value", features = ["quickjs"] }

[dev-dependencies]
tempfile = "3"
