[package]
name = "zoya-run"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen", "loader", "futures", "parallel", "array-buffer", "macro"] }
rquickjs-serde = "0.5"
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
thiserror = "2"
zoya-build = { path = "../zoya-build" }
zoya-fetch = { path = "../zoya-fetch" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-ir = { path = "../zoya-ir" }
zoya-loader = { path = "../zoya-loader" }
zoya-package = { path = "../zoya-package" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
