[package]
name = "zoya-test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
zoya-build = { path = "../zoya-build" }
zoya-fetch = { path = "../zoya-fetch" }
zoya-package = { path = "../zoya-package" }
zoya-run = { path = "../zoya-run" }
zoya-value = { path = "../zoya-value" }

[dev-dependencies]
tempfile = "3"
