[package]
name = "zoya-vcs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
similar = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v7"] }
zoya-ast = { path = "../zoya-ast" }
zoya-fmt = { path = "../zoya-fmt" }
zoya-package = { path = "../zoya-package" }

[dev-dependencies]
tempfile = "3"
zoya-lexer = { path = "../zoya-lexer" }
zoya-parser = { path = "../zoya-parser" }
