[package]
name = "zoya-vcs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = "1"
imara-diff = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v7"] }
zoya-ast = { path = "../zoya-ast" }
zoya-fmt = { path = "../zoya-fmt" }
zoya-package = { path = "../zoya-package" }

[dev-dependencies]
tempfile = "3"
zoya-lexer = { path = "../zoya-lexer" }
zoya-parser = { path = "../zoya-parser" }
