[package]
name = "zoya"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zoya"
path = "src/main.rs"

[dependencies]
zoya-ast = { path = "../zoya-ast" }
zoya-check = { path = "../zoya-check" }
zoya-codegen = { path = "../zoya-codegen" }
zoya-fmt = { path = "../zoya-fmt" }
zoya-ir = { path = "../zoya-ir" }
zoya-lexer = { path = "../zoya-lexer" }
zoya-loader = { path = "../zoya-loader" }
zoya-package = { path = "../zoya-package" }
zoya-parser = { path = "../zoya-parser" }
zoya-router = { path = "../zoya-router" }
zoya-run = { path = "../zoya-run" }
zoya-std = { path = "../zoya-std" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
notify = "7"
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
console = "0.15"
rustyline = "14"
dirs = "5"

[dev-dependencies]
tempfile = "3"
