[package]
name = "zoya"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "zoya"
path = "src/main.rs"

[dependencies]
zoya-ast = { path = "../zoya-ast" }
zoya-build = { path = "../zoya-build" }
zoya-dashboard = { path = "../zoya-dashboard" }
zoya-fmt = { path = "../zoya-fmt" }
zoya-lexer = { path = "../zoya-lexer" }
zoya-loader = { path = "../zoya-loader" }
zoya-package = { path = "../zoya-package" }
zoya-parser = { path = "../zoya-parser" }
zoya-router = { path = "../zoya-router" }
zoya-run = { path = "../zoya-run" }
zoya-test = { path = "../zoya-test" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
notify = "7"
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
console = "0.15"
rustyline = "14"
dirs = "5"

[dev-dependencies]
tempfile = "3"
